[project]
name = "plotly_extras_0_2"
version = "0.2.0"
description = "Extra charts for Plotly Express: waterfall, dumbbell, waffle, and more."
authors = [
    { name = "Alan Jones" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "streamlit>=1.46.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"